logs/dag_id=dag_with_postgres_operator_v04/run_id=scheduled__2023-06-07T00:00:00+00:00/task_id=delete_into_table/attempt=1.log
[2023-06-09T14:52:15.013+0000] {taskinstance.py:1103} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: dag_with_postgres_operator_v04.delete_into_table scheduled__2023-06-07T00:00:00+00:00 [queued]>
[2023-06-09T14:52:15.019+0000] {taskinstance.py:1103} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: dag_with_postgres_operator_v04.delete_into_table scheduled__2023-06-07T00:00:00+00:00 [queued]>
[2023-06-09T14:52:15.020+0000] {taskinstance.py:1308} INFO - Starting attempt 1 of 6
[2023-06-09T14:52:15.028+0000] {taskinstance.py:1327} INFO - Executing <Task(PostgresOperator): delete_into_table> on 2023-06-07 00:00:00+00:00
[2023-06-09T14:52:15.031+0000] {standard_task_runner.py:57} INFO - Started process 1749 to run task
[2023-06-09T14:52:15.036+0000] {standard_task_runner.py:84} INFO - Running: ['***', 'tasks', 'run', 'dag_with_postgres_operator_v04', 'delete_into_table', 'scheduled__2023-06-07T00:00:00+00:00', '--job-id', '43', '--raw', '--subdir', 'DAGS_FOLDER/dag_with_postgres_operator.py', '--cfg-path', '/tmp/tmpvyhfb5ax']
[2023-06-09T14:52:15.039+0000] {standard_task_runner.py:85} INFO - Job 43: Subtask delete_into_table
[2023-06-09T14:52:15.078+0000] {task_command.py:410} INFO - Running <TaskInstance: dag_with_postgres_operator_v04.delete_into_table scheduled__2023-06-07T00:00:00+00:00 [running]> on host 94560a00d375
[2023-06-09T14:52:15.134+0000] {taskinstance.py:1547} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='znawawi' AIRFLOW_CTX_DAG_ID='dag_with_postgres_operator_v04' AIRFLOW_CTX_TASK_ID='delete_into_table' AIRFLOW_CTX_EXECUTION_DATE='2023-06-07T00:00:00+00:00' AIRFLOW_CTX_TRY_NUMBER='1' AIRFLOW_CTX_DAG_RUN_ID='scheduled__2023-06-07T00:00:00+00:00'
[2023-06-09T14:52:15.135+0000] {sql.py:262} INFO - Executing: 
            delete from dag_runs where dt = '2023-06-07' and dag_id = 'dag_with_postgres_operator_v04')
        
[2023-06-09T14:52:15.147+0000] {base.py:73} INFO - Using connection ID 'postgres_localhost' for task execution.
[2023-06-09T14:52:15.189+0000] {base.py:73} INFO - Using connection ID 'postgres_localhost' for task execution.
[2023-06-09T14:52:15.198+0000] {sql.py:375} INFO - Running statement: 
            delete from dag_runs where dt = '2023-06-07' and dag_id = 'dag_with_postgres_operator_v04')
        , parameters: None
[2023-06-09T14:52:15.201+0000] {taskinstance.py:1824} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/operators/sql.py", line 274, in execute
    **extra_kwargs,
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/hooks/sql.py", line 349, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/hooks/sql.py", line 380, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near ")"
LINE 2: ... '2023-06-07' and dag_id = 'dag_with_postgres_operator_v04')
                                                                      ^

[2023-06-09T14:52:15.209+0000] {taskinstance.py:1350} INFO - Marking task as UP_FOR_RETRY. dag_id=dag_with_postgres_operator_v04, task_id=delete_into_table, execution_date=20230607T000000, start_date=20230609T145215, end_date=20230609T145215
[2023-06-09T14:52:15.218+0000] {standard_task_runner.py:109} ERROR - Failed to execute job 43 for task delete_into_table (syntax error at or near ")"
LINE 2: ... '2023-06-07' and dag_id = 'dag_with_postgres_operator_v04')
                                                                      ^
; 1749)
[2023-06-09T14:52:15.247+0000] {local_task_job_runner.py:225} INFO - Task exited with return code 1
[2023-06-09T14:52:15.266+0000] {taskinstance.py:2651} INFO - 0 downstream tasks scheduled from follow-on schedule check
